--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^13.0.0",
+    "@react-native-firebase/auth": "^13.0.0",
+    "@react-native-firebase/firestore": "^13.0.0",
+    "@react-native-firebase/storage": "^13.0.0",
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.66.1",
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-safe-area-context": "^3.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
