--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@react-native-firebase/firestore": "^13.0.0",
     "@react-native-firebase/storage": "^13.0.0",
     "formik": "^2.2.9",
+    "modal": "^1.2.0",
     "react": "17.0.2",
     "react-native": "0.66.1",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-vector-icons": "^9.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
